--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,17 +1,22 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+:root {
+  --backgroundColor: #2C2C2C;
+  --offWhite: #F1EEE3;
+}
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Lato', sans-serif;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: var(--backgroundColor);
+  color: var(--offWhite);
+  font-family: 'Lato', sans-serif;
 }
 
 a {
