--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,13 +1,14 @@
 :root {
-  --backgroundColor: #2C2C2C;
-  --offWhite: #F1EEE3;
+  --backgroundColor: #2c2c2c;
+  --offWhite: #f1eee3;
+  --purple: #a3a7fd;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -16,7 +17,7 @@ body {
   overflow-x: hidden;
   background-color: var(--backgroundColor);
   color: var(--offWhite);
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 a {
