--- a/src/components/loading-spinner/FootballLoader.module.scss
+++ b/src/components/loading-spinner/FootballLoader.module.scss
@@ -1,6 +1,7 @@
 .mainFader {
+  display: flex;
+  margin: 0 auto;
   width: 100%;
-  height: 100vh;
   position: absolute;
   .loader {
     position: fixed;
