--- a/src/styles/ladder.module.scss
+++ b/src/styles/ladder.module.scss
@@ -1,16 +1,18 @@
-.gridContainer {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 10px;
-}
-
 .tableContainer {
   overflow-x: auto;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin: 20px 10px 0;
 }
 
 .table {
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
   border-collapse: collapse;
-  margin-top: 20px;
+  width: 80%;
+  max-width: 600px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 
   thead {
     background-image: linear-gradient(
@@ -22,25 +24,24 @@
   }
 }
 
-.tableHeader,
+.tableHeaders,
 .tableCells {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
+  padding: 12px;
+  text-align: center;
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.gridTitles {
-  display: flex;
+.tableHeaders {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
-.gridSubtitles {
-  display: flex;
-  gap: 10px;
-  margin-left: auto;
-}
-
-.ladderRows {
-  display: flex;
+.tableBody {
+  tr:nth-child(even) {
+    background-color: rgba(255, 255, 255, 0.05);
+  }
+  tr:nth-child(odd) {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
 }
 
 .loderCredit {
